--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:icon">
         <activity android:name=".SplashActivity">
+
+        </activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".SinavActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SinavActivity"></activity>
     </application>
 
 </manifest>
